--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html {
 body {
     margin: 5px;
     padding: 10px;
+    padding-right: 50px;
+    padding-left: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; 
     grid-template-rows: auto auto;
@@ -95,6 +97,9 @@ header {
         }
     }
 }
+.hidden {
+    display: none;
+}
 aside {
     grid-area: aside;
     display: grid;
@@ -184,5 +189,42 @@ footer {
     grid-area: footer;
     h1 {
         font-size: 64px;
+    }
+}
+@media only screen and (min-width: 285px) and (max-width: 900px) {
+    header {
+        height: fit-content;
+        display: flex;  
+        justify-content: space-around;
+        h1 {
+            font-size: 35px;
+            display: flex;
+            align-self: center;
+        }
+        .navbar {
+            text-decoration: none;
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            gap: 14%;
+            align-items: flex-end;
+        }
+        li {
+            display: flex;
+            flex-direction: row;
+            padding-bottom: 20px;
+            :hover {
+                cursor: pointer;
+                color: #ffc07c;
+            }
+            i {
+                text-align: center;
+                font-size: 2rem;
+                padding-right: 3px;
+            }
+            p {
+                margin-top: 5px;
+            }
+        }
     }
 }
